# bank

./: .gitignore  README.md  banking.db  pyproject.toml
src/: __init__.py  banking_api.py  data.py  models.py
tests/: test_overall.py
